--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 pillow>=10.0.0
 typing-extensions>=4.0.0
 pydantic<3.0.0,>=2.0.0
-protobuf~=4.21.0
+# protobuf~=4.21.0  # Temporarily commented out to resolve conflict with autogen-core
 opentelemetry-api>=1.20.0
 jsonref~=1.1.0
 rich>=13.0.0
@@ -53,6 +53,7 @@ autogen-ext[magentic-one,openai]>=0.4.9,<0.5
 azure-identity
 azure-ai-inference>=1.0.0b7,<2.0.0
 azure-core>=1.26.0,<2.0.0
+autogenstudio # Let uv find a compatible version
 
 # Development Tools
 poetry>=1.0.0
